bump 2.0-ALPHA02
Signed-off-by: Wadamzmail <alksndrmetwakil@gmail.com>